datalog/src/main/java/edu/ucla/cs/wis/bigdatalog/compiler/language/DeALParser.java
// Generated from DeAL.g4 by ANTLR 4.5.3
package edu.ucla.cs.wis.bigdatalog.compiler.language;

	import java.util.*;

    import org.antlr.v4.runtime.misc.Predicate;
    import org.slf4j.LoggerFactory;
	import org.slf4j.Logger;
	/*import org.antlr.runtime.BitSet;
	import edu.ucla.cs.wis.bigdatalog.system.DeALSContext;
	import edu.ucla.cs.wis.bigdatalog.common.Pair;
	import edu.ucla.cs.wis.bigdatalog.compiler.*;
	import edu.ucla.cs.wis.bigdatalog.compiler.aggregate.*;*/
	import edu.ucla.cs.wis.bigdatalog.compiler.predicate.*;
	/*import edu.ucla.cs.wis.bigdatalog.compiler.type.*;	
	import edu.ucla.cs.wis.bigdatalog.compiler.variable.*;
	import edu.ucla.cs.wis.bigdatalog.compiler.CompilerException;
	import edu.ucla.cs.wis.bigdatalog.type.*;*/

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DeALParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, LINE_COMMENT=27, MULTILINE_COMMENT=28, NEWLINE=29, 
		WS=30, STRING=31, DATA_TYPE=32, SORT_ORDER=33, MODULE=34, DATABASE=35, 
		EXPORT=36, INDEX=37, KEY=38, IF=39, THEN=40, ELSE=41, TRUE=42, FALSE=43, 
		NIL=44, BEGIN=45, END=46, CHOICE=47, MULTI=48, SINGLE=49, EMPTY=50, RETURN=51, 
		LIMIT=52, SORT=53, DESC=54, ASC=55, MOD=56, OPC=57, LOG=58, EXP=59, STEP=60, 
		DIV=61, AGGREGATE_FSMAX=62, AGGREGATE_FSMIN=63, AGGREGATE_FSCNT=64, AGGREGATE_FSSUM=65, 
		IDENTIFIER=66, VARIABLENAME=67, INPUT_VARIABLE=68, INTEGER=69, DECIMAL=70;
	public static final int
		RULE_parseQueryForm = 0, RULE_parseQuery = 1, RULE_parseRule = 2, RULE_parseGroundTerm = 3, 
		RULE_parseGroundPredicate = 4, RULE_parseLoadDatabaseObjects = 5, RULE_parseLoadDatabaseFacts = 6, 
		RULE_databaseObjectDeclarations = 7, RULE_databaseDeclaration = 8, RULE_moduleDeclaration = 9, 
		RULE_databaseBasePredicates = 10, RULE_fact = 11, RULE_groundArguments = 12, 
		RULE_groundTerm = 13, RULE_groundListTerms = 14, RULE_groundListTerms2 = 15, 
		RULE_basePredicate = 16, RULE_basePredicateStructuralAttribute = 17, RULE_basePredicateKeyOrIndex = 18, 
		RULE_export = 19, RULE_predicateRule = 20, RULE_ruleHead = 21, RULE_ruleBody = 22, 
		RULE_literal = 23, RULE_predicate = 24, RULE_binaryOperator = 25, RULE_choiceArgument = 26, 
		RULE_headPredicate = 27, RULE_headTerm = 28, RULE_headAggregateTerm = 29, 
		RULE_headFscntSubterms = 30, RULE_term = 31, RULE_basicExpression = 32, 
		RULE_unaryArithmeticExpression = 33, RULE_multiplicativeArithmeticExpression = 34, 
		RULE_arithmeticExpression = 35, RULE_arithmeticTerm = 36, RULE_nonArithmeticTerm = 37, 
		RULE_functorTerm = 38, RULE_listTerm = 39, RULE_listTermArguments = 40, 
		RULE_queryForm = 41, RULE_queryFormArguments = 42, RULE_queryFormTerm = 43, 
		RULE_name = 44, RULE_anyString = 45, RULE_annotations = 46, RULE_variables = 47, 
		RULE_variable = 48, RULE_udaPredicates = 49, RULE_keyword = 50, RULE_signedInteger = 51, 
		RULE_signedDecimal = 52;
	public static final String[] ruleNames = {
		"parseQueryForm", "parseQuery", "parseRule", "parseGroundTerm", "parseGroundPredicate", 
		"parseLoadDatabaseObjects", "parseLoadDatabaseFacts", "databaseObjectDeclarations", 
		"databaseDeclaration", "moduleDeclaration", "databaseBasePredicates", 
		"fact", "groundArguments", "groundTerm", "groundListTerms", "groundListTerms2", 
		"basePredicate", "basePredicateStructuralAttribute", "basePredicateKeyOrIndex", 
		"export", "predicateRule", "ruleHead", "ruleBody", "literal", "predicate", 
		"binaryOperator", "choiceArgument", "headPredicate", "headTerm", "headAggregateTerm", 
		"headFscntSubterms", "term", "basicExpression", "unaryArithmeticExpression", 
		"multiplicativeArithmeticExpression", "arithmeticExpression", "arithmeticTerm", 
		"nonArithmeticTerm", "functorTerm", "listTerm", "listTermArguments", "queryForm", 
		"queryFormArguments", "queryFormTerm", "name", "anyString", "annotations", 
		"variables", "variable", "udaPredicates", "keyword", "signedInteger", 
		"signedDecimal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'('", "'{'", "','", "'}'", "')'", "'['", "']'", "'|'", "':'", 
		"'<-'", "'~'", "'='", "'~='", "'>'", "'<'", "'>='", "'<='", "'*='", "'~*='", 
		"'*'", "'/'", "'-'", "'+'", "'@'", "'_'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "LINE_COMMENT", "MULTILINE_COMMENT", "NEWLINE", "WS", 
		"STRING", "DATA_TYPE", "SORT_ORDER", "MODULE", "DATABASE", "EXPORT", "INDEX", 
		"KEY", "IF", "THEN", "ELSE", "TRUE", "FALSE", "NIL", "BEGIN", "END", "CHOICE", 
		"MULTI", "SINGLE", "EMPTY", "RETURN", "LIMIT", "SORT", "DESC", "ASC", 
		"MOD", "OPC", "LOG", "EXP", "STEP", "DIV", "AGGREGATE_FSMAX", "AGGREGATE_FSMIN", 
		"AGGREGATE_FSCNT", "AGGREGATE_FSSUM", "IDENTIFIER", "VARIABLENAME", "INPUT_VARIABLE", 
		"INTEGER", "DECIMAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DeAL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  private static Logger logger = LoggerFactory.getLogger(ParserManager.class.getName());

		private ParserManager parserManager;
			
		public void setParserManager(ParserManager parserManager) {
			this.parserManager = parserManager;
		}
		
		public ParserManager getParserManager() { return this.parserManager; }
		
		private static Map<String, Integer> builtInPredicates = new HashMap<String, Integer>() {{ 
			put("append", 3);
			put("sort", 2);
			put("member", 2);
			put("cardinality", 2);
			put("nth_member", 3);
			put("functor", 3);	
			put("getdate", 1);
			put("datepart", 3);
			put("dateadd", 4);
			put("datediff", 4);
			put("substring", 4);
		}};
		
		public static boolean isBuiltInPredicate(String predicateName, int arity) { 
			boolean status = false;

			predicateName = predicateName.toLowerCase();
			if (builtInPredicates.containsKey(predicateName))
				if (builtInPredicates.get(predicateName).equals(arity))
					status = true;

			return status;
		}

	public DeALParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseQueryFormContext extends ParserRuleContext {
		public QueryFormContext queryForm() {
			return getRuleContext(QueryFormContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DeALParser.EOF, 0); }
		public ParseQueryFormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseQueryForm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterParseQueryForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitParseQueryForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitParseQueryForm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseQueryFormContext parseQueryForm() throws RecognitionException {
		ParseQueryFormContext _localctx = new ParseQueryFormContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parseQueryForm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			queryForm();
			setState(108);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(107);
				match(T__0);
				}
			}

			setState(110);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseQueryContext extends ParserRuleContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DeALParser.EOF, 0); }
		public ParseQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterParseQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitParseQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitParseQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseQueryContext parseQuery() throws RecognitionException {
		ParseQueryContext _localctx = new ParseQueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parseQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			predicate();
			setState(113);
			match(T__0);
			setState(114);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseRuleContext extends ParserRuleContext {
		public PredicateRuleContext predicateRule() {
			return getRuleContext(PredicateRuleContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DeALParser.EOF, 0); }
		public ParseRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterParseRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitParseRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitParseRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseRuleContext parseRule() throws RecognitionException {
		ParseRuleContext _localctx = new ParseRuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parseRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			predicateRule();
			setState(117);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseGroundTermContext extends ParserRuleContext {
		public GroundTermContext groundTerm() {
			return getRuleContext(GroundTermContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DeALParser.EOF, 0); }
		public ParseGroundTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseGroundTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterParseGroundTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitParseGroundTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitParseGroundTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseGroundTermContext parseGroundTerm() throws RecognitionException {
		ParseGroundTermContext _localctx = new ParseGroundTermContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parseGroundTerm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			groundTerm();
			setState(120);
			match(T__0);
			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseGroundPredicateContext extends ParserRuleContext {
		public FactContext fact() {
			return getRuleContext(FactContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DeALParser.EOF, 0); }
		public ParseGroundPredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseGroundPredicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterParseGroundPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitParseGroundPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitParseGroundPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseGroundPredicateContext parseGroundPredicate() throws RecognitionException {
		ParseGroundPredicateContext _localctx = new ParseGroundPredicateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parseGroundPredicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			fact();
			setState(124);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseLoadDatabaseObjectsContext extends ParserRuleContext {
		public DatabaseObjectDeclarationsContext databaseObjectDeclarations() {
			return getRuleContext(DatabaseObjectDeclarationsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DeALParser.EOF, 0); }
		public ParseLoadDatabaseObjectsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseLoadDatabaseObjects; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterParseLoadDatabaseObjects(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitParseLoadDatabaseObjects(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitParseLoadDatabaseObjects(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseLoadDatabaseObjectsContext parseLoadDatabaseObjects() throws RecognitionException {
		ParseLoadDatabaseObjectsContext _localctx = new ParseLoadDatabaseObjectsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parseLoadDatabaseObjects);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			databaseObjectDeclarations();
			setState(127);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseLoadDatabaseFactsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DeALParser.EOF, 0); }
		public List<FactContext> fact() {
			return getRuleContexts(FactContext.class);
		}
		public FactContext fact(int i) {
			return getRuleContext(FactContext.class,i);
		}
		public ParseLoadDatabaseFactsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseLoadDatabaseFacts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterParseLoadDatabaseFacts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitParseLoadDatabaseFacts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitParseLoadDatabaseFacts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseLoadDatabaseFactsContext parseLoadDatabaseFacts() throws RecognitionException {
		ParseLoadDatabaseFactsContext _localctx = new ParseLoadDatabaseFactsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parseLoadDatabaseFacts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(129);
				fact();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatabaseObjectDeclarationsContext extends ParserRuleContext {
		public ModuleDeclarationContext module;
		public DatabaseObjectDeclarationsContext tail;
		public ModuleDeclarationContext moduleDeclaration() {
			return getRuleContext(ModuleDeclarationContext.class,0);
		}
		public DatabaseObjectDeclarationsContext databaseObjectDeclarations() {
			return getRuleContext(DatabaseObjectDeclarationsContext.class,0);
		}
		public List<DatabaseDeclarationContext> databaseDeclaration() {
			return getRuleContexts(DatabaseDeclarationContext.class);
		}
		public DatabaseDeclarationContext databaseDeclaration(int i) {
			return getRuleContext(DatabaseDeclarationContext.class,i);
		}
		public DatabaseObjectDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_databaseObjectDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).enterDatabaseObjectDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeALListener ) ((DeALListener)listener).exitDatabaseObjectDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeALVisitor ) return ((DeALVisitor<? extends T>)visitor).visitDatabaseObjectDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}
